# confluence.gedit-plugin

./: AUTHORS  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  test.py
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
confluence/: __init__.py  confluenceApi.py  confluencePluginConfigureDialog.glade  confluencewidget.py  options.py  page.py
m4/: python_module.m4
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  confluence.gedit-plugin  confluence.gedit-plugin.desktop.in  confluence.plugin  org.gnome.gedit.plugins.confluence.gschema.xml  org.gnome.gedit.plugins.confluence.gschema.xml.in  org.gnome.gedit.plugins.confluence.gschema.xml.in.in
src/confluence/: CellRendererVBox.py  Makefile  Makefile.am  Makefile.in  __init__.py  attachments.py  comments.glade  comments.py  confluence.lang  confluencePluginConfigureDialog.glade  confluencewidget.py  options.py  page.py  panel.py
src/confluence/css/: comments.css
